<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_main"
        android:enabled="true"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        />

    <item
        android:id="@+id/search_fragment"
        android:enabled="true"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"
        />

    <item
        android:id="@+id/favorite_fragment"
        android:enabled="true"
        android:title="@string/favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        />

<!--    <item-->
<!--        android:id="@+id/fragment_category"-->
<!--        android:enabled="false"-->
<!--        android:title="Category"-->
<!--        android:icon="@drawable/baseline_category_24"-->
<!--        />-->

</menu>