<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/main_fragment_swipe_refresh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">


            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/top_bar_main_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/top_bar_color">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar_main_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/wallpaper"
                    app:titleCentered="true" />

            </com.google.android.material.appbar.AppBarLayout>


            <TextView
                android:id="@+id/title_popular_fragment_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/popular_wallpapers"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_bar_main_fragment" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_popular_fragment_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_popular_fragment_main"
                tools:itemCount="1"
                tools:listitem="@layout/card_recycler_fragment_main" />

            <TextView
                android:id="@+id/title_categories_fragment_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/categories"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerview_popular_fragment_main" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_categories_fragment_main"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/adView_banner_main_fragment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_categories_fragment_main"
                tools:itemCount="2"
                tools:listitem="@layout/card_recycler_categories_fragment_main" />

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView_banner_main_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="MEDIUM_RECTANGLE"
                ads:adUnitId="@string/ad_id_test"
                ads:layout_constraintBottom_toBottomOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone">
            </com.google.android.gms.ads.AdView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
